--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ Welcome Slider
 		</a>
 		</div>
 		<h1>We Are Architects</h1>
-		<p>Umas frases a descrever a empresa.  Blabla, bla blabla. Our buildings won't make your eyes hurt!</p>
+		<p>“Architecture should speak of its time and place, but yearn for timelessness.”  – Frank Gehry</p>
 		<a data-scroll href="#about" class="btn btn-transparent">About us</a>
 	</div>
 </section>
