--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ Welcome Slider
 		</a>
 		</div>
 		<h1>We Are Architects</h1>
-		<p>“Architecture should speak of its time and place, but yearn for timelessness.”  – Frank Gehry</p>
+		<p>“Architecture should speak of its time and place, but yearn for timelessness.”  – <b>Frank Gehry</b></p>
 		<a data-scroll href="#about" class="btn btn-transparent">About us</a>
 	</div>
 </section>
