--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ Welcome Slider
 
                 <!-- logo -->
                 <a class="navbar-brand logo" href="#body">
-								<h2><span class="color ">W</span>e <span class="color">A</span>re <span class="color">A</span>rchitects</h2>
+			<h2>We Are <span class="color">Architects</span></h2>
                 </a>
             <!-- /logo -->
         </div>
