--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@ Welcome Slider
 <!--
 		Start About Section
 		==================================== -->
-		<section class="bg-one about section">
+		<section class="bg-one about section" id="about">
 			<div class="container">
 				<div class="row">
 
@@ -183,7 +183,7 @@ Welcome Slider
 			</div>   	<!-- End container -->
 		</section>   <!-- End section -->
 
-<section class="section about-2 padding-0 bg-dark" id="about">
+<section class="section about-2 padding-0 bg-dark">
 	<div class="container-fluid">
 		<div class="row">
 			<div class="col-md-6 padding-0 ">
